@@ -38,6 +38,7 @@ Misc:
  - GBA Audio: Implement missing flags on SOUNDCNT_X register
  - Util: Use VFile for configuration
  - GBA Memory: Implement several unimplemented memory access types
+ - GBA: Implement bad I/O register loading
 
 0.3.1: (2015-10-24)
 Bugfixes:
